@@ -1,7 +1,7 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% load account_tags %}
+{% load account %}
 {% load url from future %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
