@@ -1,7 +1,7 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% load account_tags %}
+{% load account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
