@@ -1,5 +1,5 @@
 {% load i18n %}
-{% load account_tags %}
+{% load account %}
 
 {% user_display user as user_display %}
 <p><strong>{% trans "Note" %}:</strong> {% blocktrans %}you are already logged in as {{ user_display }}.{% endblocktrans %}</p>
