@@ -1,4 +1,4 @@
-{% load socialaccount_tags %}
+{% load socialaccount %}
 
 {% providers_media_js %}
 
