@@ -1,4 +1,4 @@
-{% load socialaccount_tags %}
+{% load socialaccount %}
 
 {% for provider in socialaccount.providers %}
 {% if provider.id == "openid" %}
