@@ -3,7 +3,7 @@
 {% load url from future %}
 {% load i18n %}
 {% load bootstrap %}
-{% load account_tags %}
+{% load account %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
