@@ -2,7 +2,7 @@
 
 {% load i18n %}
 {% load bootstrap %}
-{% load account_tags %}
+{% load account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
